[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "execution-tracker"
version = "0.1.0"
description = "Track daily output vectors, log what you ship, and get warned when you're fragmenting your focus."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  { name = "Execution Tracker Contributors" }
]
keywords = ["productivity", "tracking", "cli", "focus", "execution", "logging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
  "typer[all]>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest-cov",
]

[project.scripts]
et = "execution_tracker.cli:app"

[project.urls]
Homepage = "https://github.com/example/execution-tracker"
Repository = "https://github.com/example/execution-tracker"
Issues = "https://github.com/example/execution-tracker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/execution_tracker"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
